# Snake

./: .clang-format  .gitignore  CMakeLists.txt
modules/app/: CMakeLists.txt
modules/app/include/: Constants.h  Enums.h  Field.h  Food.h  Game.h  IObject.h  Level.h  Score.h  Snake.h  Wall.h
modules/app/source/: Field.cpp  Food.cpp  Game.cpp  Level.cpp  Main.cpp  Score.cpp  Snake.cpp  Wall.cpp
modules/utils/: CMakeLists.txt
modules/utils/include/: Convertor.h  KeyboardManager.h  RandomGenerator.h  RenderManager.h  ThreadManager.h  Types.h
modules/utils/source/: Convertor.cpp  KeyboardManager.cpp  RandomGenerator.cpp  RenderManager.cpp  Type.cpp
